--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,10 @@ services:
   - type: web
     name: my-python-server
     runtime: python
+    # This command runs during the build phase
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    # This command starts the production server
+    startCommand: gunicorn -w 4 -k uvicorn.workers.UvicornWorker app:app
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.5
+      - key: PORT
+        value: 10000
